feat($app): remove default modules
remove chat, articles modules, change to material layout, hell yeah.

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -11,21 +11,6 @@
 .x-ng-cloak {
   display: none !important;
 }
-.header-profile-image {
-  opacity: 0.8;
-  height: 28px;
-  width: 28px;
-  border-radius: 50%;
-  margin-right: 5px;
-}
-.open .header-profile-image,
-a:hover .header-profile-image {
-  opacity: 1;
-}
-.user-header-dropdown-toggle {
-  padding-top: 11px !important;
-  padding-bottom: 11px !important;
-}
 .user-primary-account {
   font-size: 30px;
   top: 10px;
@@ -40,4 +25,245 @@ a:hover .header-profile-image {
 }
 .has-error .help-inline.error-text {
   display: inline;
+}
+
+.menu {
+  background-color: transparent;
+  border: none;
+  height: 38px;
+  width: 36px;
+  min-width: 36px;
+}
+
+md-toolbar h1 {
+  margin-left: 40px;
+  display: inline-flex;
+}
+@media (max-width: 959px){
+  md-toolbar h1 {
+    margin-left: 0px;
+  } 
+}
+
+md-list .md-button {
+  color: inherit;
+  font-weight: 500;
+  text-align: left;
+  width: 100%;
+}
+
+md-list .md-button.selected {
+  color: #03a9f4;
+}
+
+md-sidenav  md-list {
+  padding: 0px 0px 8px 0px;
+}
+
+#content  {
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 5px;
+}
+
+md-button.menuBtn > md-icon {
+  fill:white;
+  width:24px;
+  height:24px;
+}
+
+.content-wrapper {
+  position: relative;
+}
+
+md-toolbar h1 {
+  font-size: 1.250em;
+  font-weight: 400;
+}
+
+md-bottom-sheet  md-icon {
+  margin-right:20px;
+}
+
+span.name {
+  font-weight: bold;
+  font-size:1.1em;
+  padding-left:5px;
+}
+
+md-list-item a{
+  text-decoration: none;
+  width: 100%;
+  padding-right: 20px;
+}
+md-list-item a:hover, a:active{
+  text-decoration: none;
+}
+
+md-sidenav {
+  overflow: visible;
+  
+}
+.side-menu, .side-menu ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 0;
+}
+
+.side-menu .md-button.active {
+  color: #C62828;
+}
+
+.parent-list-item > menu-link > .active,
+.side-menu .md-button-toggle.active{
+  background-color: #F4F4F4;
+}
+
+.side-menu .md-button.active > span {
+  color: #000; 
+}
+
+.side-menu .menu-toggle-list a.md-button {
+  display: block;
+  padding: 0 16px 0 32px;
+  text-transform: none;
+  text-rendering: optimizeLegibility;
+  font-weight: 500;
+}
+
+.side-menu .menu-toggle-list .md-button {
+  display: block;
+  padding: 0 16px 0 32px;
+  text-transform: none;
+}
+
+.side-menu > li {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.md-button-toggle .md-toggle-icon.toggled {
+  transform: rotateX(180deg);
+  -webkit-transform: rotateX(180deg);
+}
+
+.md-button-toggle.toggled {
+  background-color: rgba(0, 0, 0, 0.02);
+}
+
+.side-menu .md-button-toggle .md-toggle-icon {
+  margin: auto 0 auto auto;
+  padding-top: 12px;
+  width: 15px;
+  float: right;
+  transition: transform .3s ease-in-out;
+  -webkit-transition: -webkit-transform .3s ease-in-out;
+}
+
+.menu-toggle-list.ng-hide {
+  max-height: 0;
+}
+
+.side-menu .md-button {
+  border-radius: 0;
+  color: inherit;
+  cursor: pointer;
+  font-weight: 400;
+  line-height: 40px;
+  margin: 0;
+  max-height: 40px;
+  overflow: hidden;
+  padding: 0 16px;
+  text-align: left;
+  text-decoration: none;
+  white-space: normal;
+  width: 100%;
+}
+
+.menu-toggle-list {
+  background: #fff;
+  max-height: 1300px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+
+  -webkit-transition: 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  -webkit-transition-property: max-height;
+  -moz-transition: 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  -moz-transition-property: max-height;
+  transition: 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition-property: max-height;
+}
+
+.side-menu menu-toggle span{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+md-sidenav .site-sidenav{
+  height: 100%;
+}
+
+body{
+  -webkit-font-smoothing: antialiased !important;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+  line-height: 1.42857143;
+}
+menu-toggle button span, menu-toggle a span, menu-link a span {
+  font-family: roboto !important;
+  font-size: 13px;
+  color: #7f7f7f;
+}
+*,
+*:active,
+*:hover {
+  outline: none !important;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+}
+
+.profile-menu {
+  margin-top: -1px;
+  display: block;
+  margin-bottom: 5px;
+  width: 100%;
+  background: url(/assets/img/profile-menu.png) no-repeat left top;
+  background-size: 100%;
+}
+
+.profile-menu > .profile-pic {
+  padding: 12px;
+}
+
+.profile-menu > .profile-pic > img {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  border: 3px solid rgba(0, 0, 0, 0.14);
+  box-sizing: content-box;
+}
+.navigation-menu{
+  display: inline;
+}
+.parent-list-item {
+  display: block;
+  background: #fff;
+}
+
+md-sidenav, 
+md-sidenav.md-locked-open, 
+md-sidenav.md-closed.md-locked-open-add-active {
+    min-width: 200px !important;
+    width: 85vw !important;
+    max-width: 250px !important;
+} 
+
+#user-display-name {
+  background: rgba(0, 0, 0, 0.37 )!important;
+  color: #fff !important;
+  position: relative !important;
+}
+#user-display-name span, #user-display-name md-icon{
+  color: #fff !important;
+}
+.zmdi span{
+  margin-left: 10px;
 }
