--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,5 +1,5 @@
 .content {
-  margin-top: 50px;
+  margin-top: 50;
 }
 .undecorated-link:hover {
   text-decoration: none;
@@ -12,9 +12,9 @@
   display: none !important;
 }
 .user-primary-account {
-  font-size: 30px;
-  top: 10px;
-  right: 10px;
+  font-size: 30;
+  top: 10;
+  right: 10;
   position: absolute;
 }
 .error-text {
@@ -36,12 +36,12 @@
 }
 
 md-toolbar h1 {
-  margin-left: 40px;
+  margin-left: 40;
   display: inline-flex;
 }
 @media (max-width: 959px){
   md-toolbar h1 {
-    margin-left: 0px;
+    margin-left: 0;
   } 
 }
 
@@ -57,12 +57,12 @@ md-list .md-button.selected {
 }
 
 md-sidenav  md-list {
-  padding: 0px 0px 8px 0px;
+  padding: 0 0 8px 0;
 }
 
 #content  {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 40;
+  padding-right: 40;
   padding-top: 5px;
 }
 
@@ -82,7 +82,7 @@ md-toolbar h1 {
 }
 
 md-bottom-sheet  md-icon {
-  margin-right:20px;
+  margin-right:20;
 }
 
 span.name {
@@ -94,7 +94,7 @@ span.name {
 md-list-item a{
   text-decoration: none;
   width: 100%;
-  padding-right: 20px;
+  padding-right: 20;
 }
 md-list-item a:hover, a:active{
   text-decoration: none;
@@ -142,8 +142,11 @@ md-sidenav {
 }
 
 .md-button-toggle .md-toggle-icon.toggled {
-  transform: rotateX(180deg);
   -webkit-transform: rotateX(180deg);
+  -moz-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  -o-transform: rotateX(180deg);
+  transform: rotateX(180deg);
 }
 
 .md-button-toggle.toggled {
@@ -157,6 +160,9 @@ md-sidenav {
   float: right;
   transition: transform .3s ease-in-out;
   -webkit-transition: -webkit-transform .3s ease-in-out;
+  -moz-transition: -moz-transform .3s ease-in-out;
+  -ms-transition: -ms-transform .3s ease-in-out;
+  -o-transition: -o-transform .3s ease-in-out;
 }
 
 .menu-toggle-list.ng-hide {
@@ -168,9 +174,9 @@ md-sidenav {
   color: inherit;
   cursor: pointer;
   font-weight: 400;
-  line-height: 40px;
+  line-height: 40;
   margin: 0;
-  max-height: 40px;
+  max-height: 40;
   overflow: hidden;
   padding: 0 16px;
   text-align: left;
@@ -181,7 +187,7 @@ md-sidenav {
 
 .menu-toggle-list {
   background: #fff;
-  max-height: 1300px;
+  max-height: 1300;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -208,12 +214,13 @@ body{
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
   line-height: 1.42857143;
 }
+
 menu-toggle button span, menu-toggle a span, menu-link a span {
   font-family: roboto !important;
   font-size: 13px;
   color: #7f7f7f;
 }
-*,
+*:focus,
 *:active,
 *:hover {
   outline: none !important;
@@ -251,9 +258,9 @@ menu-toggle button span, menu-toggle a span, menu-link a span {
 md-sidenav, 
 md-sidenav.md-locked-open, 
 md-sidenav.md-closed.md-locked-open-add-active {
-    min-width: 200px !important;
+    min-width: 200 !important;
     width: 85vw !important;
-    max-width: 250px !important;
+    max-width: 250 !important;
 } 
 
 #user-display-name {
@@ -265,5 +272,5 @@ md-sidenav.md-closed.md-locked-open-add-active {
   color: #fff !important;
 }
 .zmdi span{
-  margin-left: 10px;
+  margin-left: 10;
 }
