--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,34 +1,29 @@
-<div>
-  <h3 class="col-md-12 text-center">Or with your account</h3>
-  <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
-    <form name="vm.userForm" ng-submit="vm.signin(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" placeholder="Username" lowercase required>
-          <div ng-messages="vm.userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password" placeholder="Password" required>
-          <div ng-messages="vm.userForm.password.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Password is required.</p>
-          </div>
-        </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Sign in</button>
-          &nbsp; or&nbsp;
-          <a ui-sref="authentication.signup">Sign up</a>
-        </div>
-        <div class="text-center forgot-password">
-          <a ui-sref="password.forgot">Forgot your password?</a>
-        </div>
-        <uib-alert type="danger" ng-show="vm.error" class="text-center text-danger">
-          <span ng-bind="vm.error"></span>
-        </uib-alert>
-      </fieldset>
-    </form>
-  </div>
-</div>
+
+<h3>Sign in</h3>
+<md-content layout-padding>
+  <form name="vm.userForm" ng-submit="vm.signin(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
+    <md-input-container class="md-block">
+      <label>User name</label>
+      <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username"  lowercase required>
+      <div ng-messages="vm.userForm.username.$error" role="alert">
+        <div ng-message="required">Username is required.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password" required>
+      <div ng-messages="vm.userForm.password.$error" role="alert">
+        <div ng-message="required">Password is required.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <div layout="row" layout-sm="column" layout-margin>
+        <md-button class="md-raised md-primary" type="submit">Sign in</md-button>
+        <md-button class="md-raised md-button" ui-sref="authentication.signup">Sign up</md-button>
+      </div>
+      <div>
+        <md-button md-no-ink class="md-primary" ui-sref="password.forgot">Forgot your password?</md-button>
+      </div>
+    </md-input-container>
+  </form>
+</md-content>
