--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,60 +1,57 @@
-<div>
-  <h3 class="col-md-12 text-center">Or sign up using your email</h3>
-  <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
-    <form name="vm.userForm" ng-submit="vm.signup(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.credentials.firstName" placeholder="First Name" required>
-          <div ng-messages="vm.userForm.firstName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">First name is required.</p>
-          </div>
+<h3>Sign up using your email</h3>
+<md-content layout-padding>
+  <form name="vm.userForm" ng-submit="vm.signup(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
+    <md-input-container class="md-block">
+      <label for="firstName">First Name</label>
+      <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.credentials.firstName" required>
+      <div ng-messages="vm.userForm.firstName.$error" role="alert">
+        <div ng-message="required">First name is required.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="lastName">Last Name</label>
+      <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.credentials.lastName" required>
+      <div ng-messages="vm.userForm.lastName.$error" role="alert">
+        <div ng-message="required">Last name is required.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" class="form-control" ng-model="vm.credentials.email"  lowercase required>
+      <div ng-messages="vm.userForm.email.$error" role="alert">
+        <div ng-message="required">Email address is required.</div>
+        <div ng-message="email">Email address is invalid.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username"  lowercase required>
+      <div ng-messages="vm.userForm.username.$error">
+        <div ng-message="required">Username is required.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="password">Password</label>
+        <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password"  password-validator required>
+      <div ng-messages="vm.userForm.password.$error">
+        <div ng-message="required">Password is required.</div>
+        <div ng-repeat="passwordError in passwordErrors">
+          <div ng-show="vm.userForm.password.$error.requirements">{{passwordError}}</div>
         </div>
-        <div class="form-group" show-errors>
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.credentials.lastName" placeholder="Last Name" required>
-          <div ng-messages="vm.userForm.lastName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Last name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" ng-model="vm.credentials.email" placeholder="Email" lowercase required>
-          <div ng-messages="vm.userForm.email.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Email address is required.</p>
-            <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" placeholder="Username" lowercase required>
-          <div ng-messages="vm.userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password" placeholder="Password" uib-popover="{{vm.getPopoverMsg()}}" uib-popover-trigger="focus" password-validator required>
-          <div ng-messages="vm.userForm.password.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Password is required.</p>
-            <div ng-repeat="passwordError in passwordErrors">
-              <p class="help-block error-text" ng-show="vm.userForm.password.$error.requirements">{{passwordError}}</p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group" ng-show="!vm.userForm.password.$error.required">
-          <label>Password Requirements</label>
-          <uib-progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></uib-progressbar>
-        </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Sign up</button>
-          &nbsp; or&nbsp;
-          <a ui-sref="authentication.signin" class="show-signup">Sign in</a>
-        </div>
-        <div ng-show="vm.error" class="text-center text-danger">
-          <strong ng-bind="vm.error"></strong>
-        </div>
-      </fieldset>
-    </form>
-  </div>
-</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label>Password Requirements</label>
+      <md-progress-linear value="{{requirementsProgress}}" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></md-progress-linear>
+    </md-input-container>
+    <md-input-container layout-align="center center">
+      <div layout="row" layout-sm="column" layout-margin>
+        <md-button class="md-raised md-primary" type="submit">Sign up</md-button>
+        <md-button class="md-raised md-button" ui-sref="authentication.signin">Sign in</md-button>
+      </div>
+      <div>
+        <md-button md-no-ink class="md-primary" ui-sref="password.forgot">Forgot your password?</md-button>
+      </div>
+    </md-input-container>
+  </form>
+</md-content>
