--- a/modules/users/client/views/password/forgot-password.client.view.html
+++ b/modules/users/client/views/password/forgot-password.client.view.html
@@ -1,25 +1,22 @@
-<section class="row">
-  <h3 class="col-md-12 text-center">Restore your password</h3>
-  <p class="small text-center">Enter your account username.</p>
-  <div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-    <form name="vm.forgotPasswordForm" ng-submit="vm.askForPasswordReset(vm.forgotPasswordForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
-      <fieldset>
-        <div class="form-group" show-errors>
-          <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" placeholder="Username" lowercase required>
-          <div ng-messages="vm.forgotPasswordForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Enter a username.</p>
-          </div>
-        </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-        <div ng-show="vm.error" class="text-center text-danger">
-          <strong ng-bind="vm.error"></strong>
-        </div>
-        <div ng-show="vm.success" class="text-center text-success">
-          <strong ng-bind="vm.success"></strong>
-        </div>
-      </fieldset>
-    </form>
-  </div>
-</section>
+<h3>Restore your password</h3>
+<p>Enter your account username.</p>
+<md-content layout-padding>
+  <form name="vm.forgotPasswordForm" ng-submit="vm.askForPasswordReset(vm.forgotPasswordForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
+    <md-input-container class="md-block">
+      <label>User name</label>
+      <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" lowercase required>
+      <div ng-messages="vm.forgotPasswordForm.username.$error" role="alert">
+        <div ng-message="required">Enter a username.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <md-button class="md-raised md-primary" type="submit">Submit</md-button>
+    </md-input-container>
+    <div ng-show="vm.error" class="text-center text-danger">
+      <strong ng-bind="vm.error"></strong>
+    </div>
+    <div ng-show="vm.success" class="text-center text-success">
+      <strong ng-bind="vm.success"></strong>
+    </div>
+  </form>
+</md-content>
