--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -1,46 +1,43 @@
-<section class="row">
-  <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4">
-    <form name="vm.passwordForm" ng-submit="vm.changeUserPassword(vm.passwordForm.$valid)" class="signin" novalidate autocomplete="off">
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="currentPassword">Current Password</label>
-          <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="vm.passwordDetails.currentPassword" placeholder="Current Password" required>
-          <div ng-messages="vm.passwordForm.currentPassword.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Your current password is required.</p>
-          </div>
+
+<md-content layout-padding>
+  <form name="vm.passwordForm" ng-submit="vm.changeUserPassword(vm.passwordForm.$valid)" class="signin" novalidate autocomplete="off">
+    <md-input-container class="md-block">
+      <label for="currentPassword">Current Password</label>
+      <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="vm.passwordDetails.currentPassword" required>
+      <div ng-messages="vm.passwordForm.currentPassword.$error" role="alert">
+        <div ng-message="required">Your current password is required.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="newPassword">New Password</label>
+      <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" password-validator required>
+      <div ng-messages="vm.passwordForm.newPassword.$error" role="alert">
+        <div ng-message="required">Enter a new password.</div>
+        <div ng-repeat="passwordError in passwordErrors">
+          <div ng-show="vm.passwordForm.newPassword.$error.requirements">{{passwordError}}</div>
         </div>
-        <div class="form-group" show-errors>
-          <label for="newPassword">New Password</label>
-          <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" placeholder="New Password" uib-popover="{{vm.getPopoverMsg()}}" uib-popover-trigger="focus" password-validator required>
-          <div ng-messages="vm.passwordForm.newPassword.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Enter a new password.</p>
-            <div ng-repeat="passwordError in passwordErrors">
-              <p class="help-block error-text" ng-show="vm.passwordForm.newPassword.$error.requirements">{{passwordError}}</p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="verifyPassword">Verify Password</label>
-          <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" placeholder="Verify Password" password-verify="vm.passwordDetails.newPassword" required>
-          <div ng-messages="vm.passwordForm.verifyPassword.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Verify your new password.</p>
-            <p class="help-block error-text" ng-show="vm.passwordForm.verifyPassword.$error.passwordVerify">Passwords do not match.</p>
-          </div>
-        </div>
-        <div class="form-group" ng-show="!vm.passwordForm.newPassword.$error.required">
-          <label>Password Requirements</label>
-          <uib-progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></uib-progressbar>
-        </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Save Password</button>
-        </div>
-        <div ng-show="vm.success" class="text-center text-success">
-          <strong>Password Changed Successfully</strong>
-        </div>
-        <div ng-show="vm.error" class="text-center text-danger">
-          <strong ng-bind="vm.error"></strong>
-        </div>
-      </fieldset>
-    </form>
-  </div>
-</section>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <label for="verifyPassword">Verify Password</label>
+      <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
+      <div ng-messages="vm.passwordForm.verifyPassword.$error" role="alert">
+        <div ng-message="required">Verify your new password.</div>
+        <div ng-show="vm.passwordForm.verifyPassword.$error.passwordVerify">Passwords do not match.</div>
+      </div>
+    </md-input-container>
+    <md-input-container class="md-block" ng-show="!vm.passwordForm.newPassword.$error.required">
+      <label>Password Requirements</label>
+      <md-progress-linear value="{{requirementsProgress}}" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></md-progress-linear>
+    </md-input-container>
+    <md-input-container class="md-block">
+      <md-button class="md-raised md-primary" type="submit">Save Password</md-button>
+    </md-input-container>
+    <div ng-show="vm.success" class="text-center text-success">
+      <strong>Password Changed Successfully</strong>
+    </div>
+    <div ng-show="vm.error" class="text-center text-danger">
+      <strong ng-bind="vm.error"></strong>
+    </div>
+  </form>
+</md-content>
