--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,26 +1,22 @@
-<section class="row">
-  <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-4">
-    <form class="signin form-horizontal">
-      <fieldset>
-        <div class="form-group text-center">
-          <img ng-src="{{vm.imageURL}}" alt="{{vm.user.displayName}}" class="img-thumbnail user-profile-picture">
-        </div>
-        <div class="text-center form-group" ng-hide="vm.uploader.queue.length">
-          <span class="btn btn-default btn-file">
-              Select Image <input type="file" nv-file-select uploader="vm.uploader">
-          </span>
-        </div>
-        <div class="text-center form-group" ng-show="vm.uploader.queue.length">
-          <button class="btn btn-primary" ng-click="vm.uploadProfilePicture();">Upload</button>
-          <button class="btn btn-default" ng-click="vm.cancelUpload();">Cancel</button>
-        </div>
-        <div ng-show="vm.success" class="text-center text-success">
-          <strong>Profile Picture Changed Successfully</strong>
-        </div>
-        <div ng-show="vm.error" class="text-center text-danger">
-          <strong ng-bind="vm.error"></strong>
-        </div>
-      </fieldset>
-    </form>
-  </div>
-</section>
+<md-content layout-padding>
+  <form>
+    <md-input-container class="md-block">
+      <img ng-src="{{vm.imageURL}}" alt="{{vm.user.displayName}}" class="img-thumbnail user-profile-picture">
+    </md-input-container>
+    <md-input-container class="md-block" ng-hide="vm.uploader.queue.length">
+      <span class="md-raised md-button btn-file">
+          Select Image <input type="file" nv-file-select uploader="vm.uploader">
+      </span>
+    </md-input-container>
+    <md-input-container class="md-block" ng-show="vm.uploader.queue.length">
+      <md-button class="md-raised md-primary" ng-click="vm.uploadProfilePicture();">Upload</md-button>
+      <md-button class="md-raised md-button" ng-click="vm.cancelUpload();">Cancel</md-button>
+    </md-input-container>
+    <div ng-show="vm.success" class="text-center text-success">
+      <strong>Profile Picture Changed Successfully</strong>
+    </div>
+    <div ng-show="vm.error" class="text-center text-danger">
+      <strong ng-bind="vm.error"></strong>
+    </div>
+  </form>
+</md-content>
