--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -5,16 +5,16 @@
       <label for="currentPassword">Current Password</label>
       <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="vm.passwordDetails.currentPassword" required>
       <div ng-messages="vm.passwordForm.currentPassword.$error" role="alert">
-        <div ng-message="required">Your current password is required.</div>
+        <div ng-message="required" class="error-text">Your current password is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="newPassword">New Password</label>
       <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" password-validator required>
       <div ng-messages="vm.passwordForm.newPassword.$error" role="alert">
-        <div ng-message="required">Enter a new password.</div>
+        <div ng-message="required" class="error-text">Enter a new password.</div>
         <div ng-repeat="passwordError in passwordErrors">
-          <div ng-show="vm.passwordForm.newPassword.$error.requirements">{{passwordError}}</div>
+          <div ng-show="vm.passwordForm.newPassword.$error.requirements" class="error-text">{{passwordError}}</div>
         </div>
       </div>
     </md-input-container>
@@ -22,8 +22,8 @@
       <label for="verifyPassword">Verify Password</label>
       <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
       <div ng-messages="vm.passwordForm.verifyPassword.$error" role="alert">
-        <div ng-message="required">Verify your new password.</div>
-        <div ng-show="vm.passwordForm.verifyPassword.$error.passwordVerify">Passwords do not match.</div>
+        <div ng-message="required" class="error-text">Verify your new password.</div>
+        <div ng-show="vm.passwordForm.verifyPassword.$error.passwordVerify" class="error-text">Passwords do not match.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block" ng-show="!vm.passwordForm.newPassword.$error.required">
