--- a/modules/users/client/views/password/forgot-password.client.view.html
+++ b/modules/users/client/views/password/forgot-password.client.view.html
@@ -6,7 +6,7 @@
       <label>User name</label>
       <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" lowercase required>
       <div ng-messages="vm.forgotPasswordForm.username.$error" role="alert">
-        <div ng-message="required">Enter a username.</div>
+        <div ng-message="required" class="error-text">Enter a username.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
