--- a/modules/users/client/views/password/reset-password.client.view.html
+++ b/modules/users/client/views/password/reset-password.client.view.html
@@ -5,9 +5,9 @@
       <label for="newPassword">New Password</label>
       <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" autocomplete="new-password" password-validator required>
       <div ng-messages="vm.resetPasswordForm.newPassword.$error" role="alert">
-        <div ng-message="required">Enter a new password.</div>
+        <div ng-message="required" class="error-text">Enter a new password.</div>
         <div ng-repeat="passwordError in passwordErrors">
-          <div ng-show="vm.resetPasswordForm.newPassword.$error.requirements">{{passwordError}}</div>
+          <div ng-show="vm.resetPasswordForm.newPassword.$error.requirements" class="error-text">{{passwordError}}</div>
         </div>
       </div>
     </md-input-container>
@@ -15,8 +15,8 @@
       <label for="verifyPassword">Verify Password</label>
       <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
       <div ng-messages="vm.resetPasswordForm.verifyPassword.$error" role="alert">
-        <div ng-message="required">Enter the password again to verify.</div>
-        <div ng-show="vm.resetPasswordForm.verifyPassword.$error.passwordVerify">Passwords do not match.</div>
+        <div ng-message="required" class="error-text">Enter the password again to verify.</div>
+        <div ng-show="vm.resetPasswordForm.verifyPassword.$error.passwordVerify" class="error-text">Passwords do not match.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block" ng-show="!vm.resetPasswordForm.newPassword.$error.required">
