--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -4,29 +4,29 @@
       <label for="firstName">First Name</label>
       <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.user.firstName" required>
       <div ng-messages="vm.userForm.firstName.$error" role="alert">
-        <div ng-message="required" class="error-text">First name is required.</div>
+        <div ng-message="required" class="error">First name is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="lastName">Last Name</label>
       <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.user.lastName" required>
       <div ng-messages="vm.userForm.lastName.$error" role="alert">
-        <div ng-message="required" class="error-text">Last name is required.</div>
+        <div ng-message="required" class="error">Last name is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" class="form-control" ng-model="vm.user.email" lowercase required>
       <div ng-messages="vm.userForm.email.$error" role="alert">
-        <div ng-message="required" class="error-text">Email address is required.</div>
-        <div ng-message="email" class="error-text">Email address is invalid.</div>
+        <div ng-message="required" class="error">Email address is required.</div>
+        <div ng-message="email" class="error">Email address is invalid.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="username">Username</label>
       <input type="text" id="username" name="username" class="form-control" ng-model="vm.user.username" lowercase required>
       <div ng-messages="vm.userForm.username.$error" role="alert">
-        <div ng-message="required" class="error-text">Username is required.</div>
+        <div ng-message="required" class="error">Username is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
