--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -5,38 +5,38 @@
       <label for="firstName">First Name</label>
       <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.credentials.firstName" required>
       <div ng-messages="vm.userForm.firstName.$error" role="alert">
-        <div ng-message="required">First name is required.</div>
+        <div ng-message="required"  class="error">First name is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="lastName">Last Name</label>
       <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.credentials.lastName" required>
       <div ng-messages="vm.userForm.lastName.$error" role="alert">
-        <div ng-message="required">Last name is required.</div>
+        <div ng-message="required"  class="error">Last name is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" class="form-control" ng-model="vm.credentials.email"  lowercase required>
       <div ng-messages="vm.userForm.email.$error" role="alert">
-        <div ng-message="required">Email address is required.</div>
-        <div ng-message="email">Email address is invalid.</div>
+        <div ng-message="required"  class="error">Email address is required.</div>
+        <div ng-message="email"  class="error">Email address is invalid.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="username">Username</label>
       <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username"  lowercase required>
       <div ng-messages="vm.userForm.username.$error">
-        <div ng-message="required" class="error-text">Username is required.</div>
+        <div ng-message="required" class="error">Username is required.</div>
       </div>
     </md-input-container>
     <md-input-container class="md-block">
       <label for="password">Password</label>
         <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password"  password-validator required>
       <div ng-messages="vm.userForm.password.$error">
-        <div ng-message="required" class="error-text">Password is required.</div>
+        <div ng-message="required" class="error">Password is required.</div>
         <div ng-repeat="passwordError in passwordErrors">
-          <div ng-show="vm.userForm.password.$error.requirements" class="error-text">{{passwordError}}</div>
+          <div ng-show="vm.userForm.password.$error.requirements" class="error">{{passwordError}}</div>
         </div>
       </div>
     </md-input-container>
