--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -3,5 +3,5 @@
              aria-label="Show User List">
       <md-icon md-svg-icon="menu" ></md-icon>
   </md-button>
-  <h1>AutoWorkshop</h1>
+  <h1><a ui-sref="home">AutoWorkshop</a></h1>
 </div>
